--- a/pytorch-sm-bert-data-parallel.ipynb
+++ b/pytorch-sm-bert-data-parallel.ipynb
@@ -409,7 +409,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make inferene using the deployed sentiment classifier model"
+    "Make inference using the deployed sentiment classifier model"
    ]
   },
   {
