--- a/pytorch-sm-bert-dist.ipynb
+++ b/pytorch-sm-bert-dist.ipynb
@@ -211,28 +211,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Configuration for running training on smdistributed (Data Parallelism)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "distribution = {'smdistributed': {'dataparallel': { 'enabled': True }}}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Define metric definitions "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +274,6 @@
     "                                    transformers_version='4.6',\n",
     "                                    pytorch_version='1.7',\n",
     "                                    py_version='py36',\n",
-    "                                    distribution= distribution,\n",
     "                                    hyperparameters = hyperparameters)"
    ]
   },
@@ -303,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +304,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "2021-10-13 21:20:50 Starting - Starting the training job."
+      "2021-10-13 21:48:21 Starting - Starting the training job.\n",
+      "2021-10-13 21:48:28 Starting - Launching requested ML instances....................\n",
+      "2021-10-13 21:50:16 Starting - Preparing the instances for training........................\n",
+      "2021-10-13 21:52:22 Downloading - Downloading input data.....\n",
+      "2021-10-13 21:52:49 Training - Downloading the training image.......................\n",
+      "2021-10-13 21:54:50 Training - Training image download completed. Training in progress........................................................................................................\n",
+      "2021-10-13 22:03:34 Uploading - Uploading generated training model............\n",
+      "2021-10-13 22:04:40 Completed - Training job completed\n",
+      "CPU times: user 860 ms, sys: 158 ms, total: 1.02 s\n",
+      "Wall time: 16min 21s\n"
      ]
     }
    ],
@@ -340,18 +332,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "S3 uri where the trained model is located: s3://sagemaker-us-east-1-119174016168/huggingface-pytorch-training-2021-10-13-21-48-20-775/output/model.tar.gz\n"
+     ]
+    }
+   ],
    "source": [
     "logger.info(f'S3 uri where the trained model is located: {huggingface_estimator.model_data}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Latest training job name for this estimator: huggingface-pytorch-training-2021-10-13-21-48-20-775\n"
+     ]
+    }
+   ],
    "source": [
     "logger.info(f'Latest training job name for this estimator: {huggingface_estimator.latest_training_job.name}')"
    ]
@@ -365,9 +373,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------!"
+     ]
+    }
+   ],
    "source": [
     "predictor = huggingface_estimator.deploy(1, 'ml.g4dn.xlarge')"
    ]
@@ -381,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,9 +406,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'LABEL_1', 'score': 0.9366546273231506}]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "response = predictor.predict(sentiment_input)\n",
     "response"
