--- a/pytorch-sm-bert-single.ipynb
+++ b/pytorch-sm-bert-single.ipynb
@@ -93,47 +93,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hyperparameters={'epochs': 10,\n",
+    "hyperparameters={'epochs': 5,\n",
     "                 'train_batch_size': 32,\n",
-    "                 'eval_batch_size': 32,\n",
-    "                 'model_name':'roberta-large'\n",
+    "                 'model_name':'distilbert-base-uncased'\n",
     "                 }"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Configuration for running training on smdistributed (Model Parallelism)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mpi_options = {\n",
-    "    \"enabled\" : True,\n",
-    "    \"processes_per_host\" : 8,\n",
-    "}\n",
-    "\n",
-    "smp_options = {\n",
-    "    \"enabled\":True,\n",
-    "    \"parameters\": {\n",
-    "        \"microbatches\": 4,\n",
-    "        \"placement_strategy\": \"spread\",\n",
-    "        \"pipeline\": \"interleaved\",\n",
-    "        \"optimize\": \"speed\",\n",
-    "        \"partitions\": 4,\n",
-    "        \"ddp\": True,\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "distribution={\n",
-    "    \"smdistributed\": {\"modelparallel\": smp_options},\n",
-    "    \"mpi\": mpi_options\n",
-    "}"
    ]
   },
   {
@@ -176,7 +139,7 @@
    "outputs": [],
    "source": [
     "instance_type = 'ml.p3.16xlarge'\n",
-    "instance_count = 2\n",
+    "instance_count = 1\n",
     "volume_size = 200"
    ]
   },
@@ -203,7 +166,6 @@
     "                                    transformers_version='4.6',\n",
     "                                    pytorch_version='1.7',\n",
     "                                    py_version='py36',\n",
-    "                                    distribution= distribution,\n",
     "                                    hyperparameters = hyperparameters)"
    ]
   },
@@ -220,8 +182,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_input_path = f's3://{bucket}/tweets/train'\n",
-    "test_input_path = f's3://{bucket}/tweets/test'"
+    "training_input_path = f's3://{bucket}/imdb/train'\n",
+    "test_input_path = f's3://{bucket}/imdb/test'"
    ]
   },
   {
